--- a/strapi-cms/docker-compose.yml
+++ b/strapi-cms/docker-compose.yml
@@ -21,8 +21,7 @@ services:
       - ./config:/opt/app/config
       - ./src:/opt/app/src
       - ./package.json:/opt/package.json
-      - ./pnpm-lock.yaml:/opt/pnpm-lock.yaml
-
+      - ./yarn.lock:/opt/yarn.lock
       - ./.env:/opt/app/.env
       - ./public/uploads:/opt/app/public/uploads
     ports:
@@ -35,7 +34,7 @@ services:
   strapi_mysql:
     container_name: strapi_mysql
     restart: unless-stopped
-    platform: linux/amd64 #for platform error on Apple M1 chips
+    platform: linux/amd64 # For platform error on Apple M1/M2 chips
     env_file: .env
     image: mysql:latest
     command: 'mysqld --innodb-flush-method=fsync --innodb-use-native-aio=0'
@@ -46,7 +45,7 @@ services:
       MYSQL_ROOT_HOST: '%'
     volumes:
       - strapi_mysql-data:/var/lib/mysql
-      #- ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
+      #- ./data:/var/lib/postgresql/data/ # If you want to use a bind folder
     ports:
       - '3306:3306'
     networks:
